src/petal/snapshots/petal__petal__parser__tests__binary_associativity-2.snap
---
source: src/petal/parser.rs
expression: "parse(\"a * b / c\")"
---
BinaryOp {
    left: BinaryOp {
        left: Ident {
            name: "a",
            span: Span {
                start: Pos {
                    line: 0,
                    col: 1,
                },
                end: Pos {
                    line: 0,
                    col: 1,
                },
            },
        },
        op: Token {
            token_type: Star,
            lexeme: "*",
            literal: None,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 3,
                },
                end: Pos {
                    line: 0,
                    col: 3,
                },
            },
        },
        right: Ident {
            name: "b",
            span: Span {
                start: Pos {
                    line: 0,
                    col: 5,
                },
                end: Pos {
                    line: 0,
                    col: 5,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 5,
            },
        },
    },
    op: Token {
        token_type: Slash,
        lexeme: "/",
        literal: None,
        span: Span {
            start: Pos {
                line: 0,
                col: 7,
            },
            end: Pos {
                line: 0,
                col: 7,
            },
        },
    },
    right: Ident {
        name: "c",
        span: Span {
            start: Pos {
                line: 0,
                col: 9,
            },
            end: Pos {
                line: 0,
                col: 9,
            },
        },
    },
    span: Span {
        start: Pos {
            line: 0,
            col: 1,
        },
        end: Pos {
            line: 0,
            col: 9,
        },
    },
}
