src/petal/snapshots/petal__petal__parser__tests__binary_prec-2.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"1 + 2 * 3\")"
---
BinaryOp {
    left: Integer {
        value: 1,
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 1,
            },
        },
    },
    op: Token {
        token_type: Plus,
        lexeme: "+",
        literal: None,
        span: Span {
            start: Pos {
                line: 0,
                col: 3,
            },
            end: Pos {
                line: 0,
                col: 3,
            },
        },
    },
    right: BinaryOp {
        left: Integer {
            value: 2,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 5,
                },
                end: Pos {
                    line: 0,
                    col: 5,
                },
            },
        },
        op: Token {
            token_type: Star,
            lexeme: "*",
            literal: None,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 7,
                },
                end: Pos {
                    line: 0,
                    col: 7,
                },
            },
        },
        right: Integer {
            value: 3,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 9,
                },
                end: Pos {
                    line: 0,
                    col: 9,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 5,
            },
            end: Pos {
                line: 0,
                col: 9,
            },
        },
    },
    span: Span {
        start: Pos {
            line: 0,
            col: 1,
        },
        end: Pos {
            line: 0,
            col: 9,
        },
    },
}
