src/petal/snapshots/petal__petal__parser__tests__calls-3.snap
---
source: src/petal/parser.rs
expression: "parse(\"a(b) + c(d)\")"
---
BinaryOp {
    left: Call {
        callee: Ident {
            name: "a",
            span: Span {
                start: Pos {
                    line: 0,
                    col: 1,
                },
                end: Pos {
                    line: 0,
                    col: 1,
                },
            },
        },
        args: [
            Ident {
                name: "b",
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 3,
                    },
                    end: Pos {
                        line: 0,
                        col: 3,
                    },
                },
            },
        ],
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 3,
            },
        },
    },
    op: Token {
        token_type: Plus,
        lexeme: "+",
        literal: None,
        span: Span {
            start: Pos {
                line: 0,
                col: 6,
            },
            end: Pos {
                line: 0,
                col: 6,
            },
        },
    },
    right: Call {
        callee: Ident {
            name: "c",
            span: Span {
                start: Pos {
                    line: 0,
                    col: 8,
                },
                end: Pos {
                    line: 0,
                    col: 8,
                },
            },
        },
        args: [
            Ident {
                name: "d",
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 10,
                    },
                    end: Pos {
                        line: 0,
                        col: 10,
                    },
                },
            },
        ],
        span: Span {
            start: Pos {
                line: 0,
                col: 8,
            },
            end: Pos {
                line: 0,
                col: 10,
            },
        },
    },
    span: Span {
        start: Pos {
            line: 0,
            col: 1,
        },
        end: Pos {
            line: 0,
            col: 10,
        },
    },
}
