src/petal/snapshots/petal__petal__parser__tests__conditionals-2.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"1 ? 2 : 3 ? 4 : 5\")"
---
Conditional {
    condition: Integer {
        value: 1,
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 1,
            },
        },
    },
    then_branch: Integer {
        value: 2,
        span: Span {
            start: Pos {
                line: 0,
                col: 5,
            },
            end: Pos {
                line: 0,
                col: 5,
            },
        },
    },
    else_branch: Conditional {
        condition: Integer {
            value: 3,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 9,
                },
                end: Pos {
                    line: 0,
                    col: 9,
                },
            },
        },
        then_branch: Integer {
            value: 4,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 13,
                },
                end: Pos {
                    line: 0,
                    col: 13,
                },
            },
        },
        else_branch: Integer {
            value: 5,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 17,
                },
                end: Pos {
                    line: 0,
                    col: 17,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 9,
            },
            end: Pos {
                line: 0,
                col: 17,
            },
        },
    },
    span: Span {
        start: Pos {
            line: 0,
            col: 1,
        },
        end: Pos {
            line: 0,
            col: 17,
        },
    },
}
